crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_018_JalecoSS88006_Mezase_Top_Pro_Green_ni_Kakeru_Yume_Japan_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-018-JalecoSS88006/Mezase! Top Pro - Green ni Kakeru Yume (Japan).zip
rom_sha256=c4f852f76c17c7540ac05f5db76381bf2a93afad2385d6a286f854d80b76c021
frames=1141
fb_bytes=245760
cycles=33949773
audio_samples=836505
audio_fnv1a64=58fc3d044912d767
checkpoint f900 fb_fnv1a64=2b77242569662888
checkpoint f1100 fb_fnv1a64=2b77242569662888
