crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_018_JalecoSS88006_Ninja_Jajamaru_Ginga_Daisakusen_Japan_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-018-JalecoSS88006/Ninja Jajamaru - Ginga Daisakusen (Japan).zip
rom_sha256=a439b397a3d098ab0c431c7c75e1454d433a14736762addb9b0b4d5035002ada
frames=1141
fb_bytes=245760
cycles=33949775
audio_samples=836505
audio_fnv1a64=a365783ee67a56a0
checkpoint f900 fb_fnv1a64=9fa053c87464bd25
checkpoint f1100 fb_fnv1a64=9fa053c87464bd25
