crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_018_JalecoSS88006_Pizza_Pop_Japan_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-018-JalecoSS88006/Pizza Pop! (Japan).zip
rom_sha256=d46c69d2699a11d8a4d6c01d94b8ba4e84393f392809bbba38fca505202a0b60
frames=1141
fb_bytes=245760
cycles=33949781
audio_samples=836505
audio_fnv1a64=99ef0ba53a19c290
checkpoint f900 fb_fnv1a64=2441370a40807cea
checkpoint f1100 fb_fnv1a64=8d895d55b2428b92
