crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_019_Namco163_Digital_Devil_Story_Megami_Tensei_II_Japan_Rev_A_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-019-Namco163/Digital Devil Story - Megami Tensei II (Japan) (Rev A).zip
rom_sha256=2a4b06487494f86669cb10f47a467a85d07e2b5f90b1992e3334a88ffbc43e61
frames=1141
fb_bytes=245760
cycles=33949775
audio_samples=836505
audio_fnv1a64=dd410520c41819e3
checkpoint f900 fb_fnv1a64=40cbb31f69076c1c
checkpoint f1100 fb_fnv1a64=c68887b7162cc014
