crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_019_Namco163_Famista_90_Japan_En_0_91.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-019-Namco163/Famista '90 (Japan) (En) (0.91).nes
rom_sha256=1861c5bf1ef28704e261bd1fc29634ca389bca76f53d05f5407543f3d2e0905d
frames=1141
fb_bytes=245760
cycles=33949774
audio_samples=836505
audio_fnv1a64=43b570509dafdcbd
checkpoint f900 fb_fnv1a64=a9a942f15e910f8a
checkpoint f1100 fb_fnv1a64=238493fb540c4d50
